# KernelFlow

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  setup.py
agent/: cicd.md  kernels.md  working-style.md
benchmarks/: bench_all.cu  report.py
docs/: development-log.md
jenkins/: Dockerfile.jenkins  docker-compose.yml  plugins.txt
jenkins/casc/: jenkins.yaml
k8s/: jenkins-agent.yaml
kernels/: common.cuh  extension.cu
kernels/baseline/: rmsnorm.cu  rmsnorm.cuh  rope.cu  rope.cuh
kernels/fused/: fused_rmsnorm_rope.cu  fused_rmsnorm_rope.cuh
scripts/: register_webhook.sh  setup.sh
tests/: conftest.py  test_fused_rmsnorm_rope.py
